src/test/deca/syntax/invalid/lexer/wrong_string_declaration_with_backslash.deca
// Description:
//    Error declaring a string with '\' character  
//
// Result:
//    Syntax Error
//    line 9

{   
    print("Ensimag\"); // correct one is "Ensimag\\"
    return 0;
}
